# dynamic-ontology-osdk-prototype

./: .gitignore  Dockerfile.api  FINAL_RESEARCH_REPORT.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
adapters/anp/: README.md
adapters/data-platform/: README.md
adapters/gis/: README.md
core/application-host/: README.md
core/audit-service/: README.md
core/doir-registry/: README.md
core/ontologyops-osdk/: README.md
core/osdk-generator/: README.md
core/policy-service/: README.md
core/product-compiler/: README.md
core/provider-runtime/: README.md
core/trusted_data_demo/: __init__.py  adapters.py  app.py  audit.py  compiler.py  control_plane.py  fixtures.py  gateway.py  gateway_app.py  geo.py  models.py  osdk_generator.py  (+4 more)
docs/: acceptance-checklist.md  data-dictionary.md  demo-architecture-implementation-guide.md  demo-contract.md  demo-script.md  dynamic-ontology-osdk-demo-architecture-brief.docx  dynamic-ontology-osdk-demo-architecture-brief.md  project-status-and-osdk.md
examples/: sample-doir.yaml
prototype-plan/: dynamic-osdk-v0.2-remote-gateway-development-plan.md  prototype-development-plan.md  trusted-data-product-flow-demo-plan.md
references/: agentic-ops-research.md  open-oosdk-author-github.md  palantir-osdk-research.md  source-index.md
specs/: dynamic-ontology-ir.md
tests/: test_compiler.py  test_gateway.py  test_provider_app.py  test_runtime_policy_audit.py
tools/: build_editable_brief_docx.py  build_trusted_space_feasibility_docx.py  generate_osdk_packages.py  render_architecture_diagrams.py
(+17 files in other folders)
