[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trusted-data-demo"
version = "0.1.0"
description = "Dynamic ontology OSDK trusted data product flow demo"
requires-python = ">=3.9"
dependencies = [
  "cryptography>=46,<47",
  "fastapi>=0.115",
  "pydantic>=2.7",
  "uvicorn[standard]>=0.30",
]

[tool.setuptools]
package-dir = {"" = "core"}

[tool.setuptools.packages.find]
where = ["core"]
